LPS-66873 Port a8fc9d257b2ad5c3adc4bdcc12aed26953bca290 to Gradle